# transformer-spectrum

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
tests/: __init__.py  test_data_processing.py  test_loss_functions.py  test_settings.py  test_spectral_metrics.py  test_training.py
transformer_spectrum/: __init__.py  cli.py  config.py  dataset.py  features.py  plots.py  settings.py
transformer_spectrum/data/: utils.py
transformer_spectrum/data/owid_covid/: dataset.py  load_data.py
transformer_spectrum/data/rvr_us/: dataset.py
transformer_spectrum/data/synthetic/: generate_data.py
transformer_spectrum/experiments/: owid_covid_data.py  rvr_us_data.py  synthetic_data.py
transformer_spectrum/experiments/utils/: collect_artifacts.py
transformer_spectrum/metrics/: heavy_tail_estimation.py  skewness_estimation.py  spectral_metrics.py  training_metrics.py
transformer_spectrum/modeling/: data_processing.py  loss_functions.py  models.py  predict.py  train.py  train_es.py  train_ga.py  trainer.py  utils.py  utils_ga.py  visualize.py
