[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "transformer_spectrum"
version = "0.1.0"
description = "Analyzing how loss functions affect transformer weight spectra"
authors = [
  { name = "Mikhail Gritskikh" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"

dependencies = [
    "torch>=2.0",
    "numpy>=2.0",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "mlflow>=2.0",
    "typer>=0.9",
    "loguru>=0.7",
    "tqdm>=4.65",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.12",
    "flake8>=6.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "pre-commit>=3.0",
]
evolution = [
    "evotorch>=0.5",
]

[project.scripts]
transformer-spectrum = "transformer_spectrum.cli:main"

[project.urls]
Homepage = "https://github.com/your-username/transformer-spectrum"
Repository = "https://github.com/your-username/transformer-spectrum"

[tool.black]
line-length = 99
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | __pycache__
  | \.eggs
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 99
known_first_party = ["transformer_spectrum"]
force_sort_within_sections = true
skip = [".git", "venv", ".venv", "__pycache__"]

[tool.ruff]
line-length = 99
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "notebooks",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "venv",
    ".venv",
    "notebooks",
    "tests",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]


